Add contact page

--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,8 @@ body {
   font-style: italic;
 }
 
-.item p:first-of-type {
+.item p:first-of-type,
+.person p:first-of-type {
   font-size: 1.25rem;
   font-weight: bold;
 }
